@@ -284,6 +284,13 @@
       <artifactId>selenium-java</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.saucelabs</groupId>
+      <artifactId>sauce_junit</artifactId>
+      <version>[1.0.0,)</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
    
   <build>
@@ -458,6 +465,9 @@
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>2.16</version>
             <configuration>
+              <includes>
+                <include>fi/foyt/fni/test/ui/chrome/**/*IT.java</include>
+              </includes>
               <systemPropertyVariables>
                 <jboss.home>${wildfly.home}</jboss.home>
                 <module.path>${wildfly.home}/modules</module.path>
@@ -706,6 +716,360 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>sauce</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      
+      <properties>
+        <wildfly.home>${project.basedir}/.cargo/extracts/wildfly-8.1.0.CR1/wildfly-8.1.0.CR1</wildfly.home>
+        <wildfly.version>8.1.0.CR1</wildfly.version>
+        <h2.version>1.4.177</h2.version>
+        <it.port.http>8080</it.port.http>
+        <it.port.https>8443</it.port.https>
+        <it.host>dev.forgeandillusion.net</it.host>
+        <it.ctx>fnici</it.ctx>
+        <it.jdbc.driver>org.h2.Driver</it.jdbc.driver>
+        <it.jdbc.url>jdbc:h2:file:${project.build.directory}/h2;AUTO_SERVER=TRUE</it.jdbc.url>
+        <it.jdbc.jndi>java:/jboss/datasources/MysqlDS</it.jdbc.jndi>
+        <it.jdbc.username>sa</it.jdbc.username>
+        <it.jdbc.password>sa</it.jdbc.password>
+      </properties>
+      
+      <dependencies>
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+          <version>${h2.version}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.14.1</version>
+            <configuration>
+              <systemPropertyVariables>
+                <jboss.home>${wildfly.home}</jboss.home>
+                <module.path>${wildfly.home}/modules</module.path>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+          
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>properties-maven-plugin</artifactId>
+            <version>1.0-alpha-2</version>
+            <executions>
+              <execution>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>read-project-properties</goal>
+                </goals>
+                <configuration>
+                  
+                  <files>
+                    <file>src/test/resources/it.properties</file>
+                  </files>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+    
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.16</version>
+            <configuration>
+              <includes>
+                <include>fi/foyt/fni/test/ui/sauce/**/*IT.java</include>
+              </includes>
+              <systemPropertyVariables>
+                <jboss.home>${wildfly.home}</jboss.home>
+                <module.path>${wildfly.home}/modules</module.path>
+                <it.host>${it.host}</it.host>
+                <it.port.http>${it.port.http}</it.port.http>
+                <it.port.https>${it.port.https}</it.port.https>
+                <it.ctx>${it.ctx}</it.ctx>
+                <it.jdbc.driver>${it.jdbc.driver}</it.jdbc.driver>
+                <it.jdbc.url>${it.jdbc.url}</it.jdbc.url>
+                <it.jdbc.jndi>${it.jdbc.jndi}</it.jdbc.jndi>
+                <it.jdbc.username>${it.jdbc.username}</it.jdbc.username>
+                <it.jdbc.password>${it.jdbc.password}</it.jdbc.password>
+                <it.google.apiKey>${it.google.apiKey}</it.google.apiKey>
+                <it.google.apiSecret>${it.google.apiSecret}</it.google.apiSecret>
+                <it.google.username>${it.google.username}</it.google.username>
+                <it.google.password>${it.google.password}</it.google.password>
+                <it.facebook.apiKey>${it.facebook.apiKey}</it.facebook.apiKey>
+                <it.facebook.apiSecret>${it.facebook.apiSecret}</it.facebook.apiSecret>
+                <it.facebook.username>${it.facebook.username}</it.facebook.username>
+                <it.facebook.password>${it.facebook.password}</it.facebook.password>
+                <it.dropbox.apiKey>${it.dropbox.apiKey}</it.dropbox.apiKey>
+                <it.dropbox.apiSecret>${it.dropbox.apiSecret}</it.dropbox.apiSecret>
+                <it.dropbox.username>${it.dropbox.username}</it.dropbox.username>
+                <it.dropbox.password>${it.dropbox.password}</it.dropbox.password>
+                <it.sauce.username>${it.sauce.username}</it.sauce.username>
+                <it.sauce.accessKey>${it.sauce.accessKey}</it.sauce.accessKey>
+              </systemPropertyVariables>
+            </configuration>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+    
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <version>1.5</version>
+            <dependencies>
+              <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>${h2.version}</version>
+              </dependency>
+            </dependencies>
+    
+            <configuration>      
+              <driver>${it.jdbc.driver}</driver>
+              <url>${it.jdbc.url}</url>
+              <username>${it.jdbc.username}</username>
+              <password>${it.jdbc.password}</password>
+            </configuration>
+            <executions>
+              <execution>
+                <id>create-schema</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <autocommit>true</autocommit>
+                  <srcFiles>
+                    <srcFile>src/test/resources/create.sql</srcFile>
+                    <srcFile>src/test/resources/data.sql</srcFile>
+                  </srcFiles>
+                </configuration>
+              </execution>
+              
+              <execution>
+                <id>drop-db-after-test</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+                <configuration>
+                  <autocommit>true</autocommit>
+                  <srcFiles>
+                    <srcFile>src/test/resources/drop.sql</srcFile>
+                  </srcFiles>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>keytool-maven-plugin</artifactId>
+            <version>1.4</version>
+            <executions>
+              <execution>
+                <phase>generate-resources</phase>
+                <id>keyclean</id>
+                <goals>
+                  <goal>clean</goal>
+                </goals>
+                <configuration>
+                  <keystore>${project.build.directory}/fnici.keystore</keystore>
+                </configuration>
+              </execution>
+              <execution> 
+                <phase>generate-resources</phase>
+                <id>genkey</id>
+                <goals>
+                  <goal>generateKeyPair</goal>
+                </goals>
+                <configuration>
+                  <keystore>${project.build.directory}/fnici.keystore</keystore>
+                  <dname>cn=${it.host}, ou=None, L=Test, ST=Test, o=Test, c=TE</dname>
+                  <storepass>storepass</storepass>
+                  <alias>fnici</alias>
+                  <keyalg>RSA</keyalg>
+                  <keysize>2048</keysize>
+                </configuration>
+              </execution>
+              <execution>
+                <phase>generate-resources</phase>
+                <id>exportkey</id>
+                <goals>
+                  <goal>exportCertificate</goal>
+                </goals>
+                <configuration>
+                  <keystore>${project.build.directory}/fnici.keystore</keystore>
+                  <alias>fnici</alias>
+                  <file>${project.build.directory}/fnici.crt</file>
+                  <storepass>storepass</storepass>
+                </configuration>
+              </execution>
+              <execution>
+                <phase>generate-resources</phase>
+                <id>importkey</id>
+                <goals>
+                  <goal>importCertificate</goal>
+                </goals>
+                <configuration>
+                  <keystore>${project.build.directory}/fnici.keystore</keystore>
+                  <alias>root</alias>
+                  <file>${project.build.directory}/fnici.crt</file>
+                  <storepass>storepass</storepass>
+                  <noprompt>true</noprompt>
+                  <trustcacerts>true</trustcacerts>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          
+          <plugin>
+            <groupId>com.saucelabs.maven.plugin</groupId>
+            <artifactId>sauce-connect-plugin</artifactId>
+            <version>2.1.1</version>
+            <configuration>
+              <sauceUsername>${it.sauce.username}</sauceUsername>
+              <sauceAccessKey>${it.sauce.accessKey}</sauceAccessKey>
+            </configuration>
+            <executions>
+              <execution>
+                <id>start-sauceconnct</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start-sauceconnect</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>stop-sauceconnect</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop-sauceconnect</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+    
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven2-plugin</artifactId>
+            <version>1.4.8</version>
+            <configuration>
+              <container>
+                <containerId>wildfly8x</containerId>
+                <log>${project.basedir}/target/cargo.log</log>
+                <output>${project.basedir}/target/wildfly.log</output>
+                <zipUrlInstaller>
+                  <url>http://download.jboss.org/wildfly/8.1.0.CR1/wildfly-8.1.0.CR1.zip</url>
+                  <downloadDir>${project.basedir}/.cargo/downloads</downloadDir>
+                  <extractDir>${project.basedir}/.cargo/extracts</extractDir>
+                </zipUrlInstaller>
+                <dependencies>
+                  <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                  </dependency>
+                </dependencies>
+              </container>
+              <configuration>
+                <properties>
+                  <cargo.servlet.port>${it.port.http}</cargo.servlet.port>
+                  <cargo.jboss.configuration>standalone</cargo.jboss.configuration>
+                  <cargo.jvmargs>-Xms64m -Xmx1152m -XX:MaxPermSize=512m -XX:-UseSplitVerifier</cargo.jvmargs>
+                  <cargo.datasource.datasource.fnici>
+                    cargo.datasource.driver=${it.jdbc.driver}|
+                    cargo.datasource.url=${it.jdbc.url}|
+                    cargo.datasource.jndi=${it.jdbc.jndi}|
+                    cargo.datasource.username=${it.jdbc.username}|
+                    cargo.datasource.password=${it.jdbc.password}|
+                    cargo.datasource.transactionsupport=LOCAL_TRANSACTION
+                  </cargo.datasource.datasource.fnici>
+                </properties>    
+              </configuration>
+              <deployables>
+                <deployable>
+                  <properties>
+                    <context>${it.ctx}</context>
+                  </properties>
+                  <pingURL>http://${it.host}:${it.port.http}/${it.ctx}</pingURL>
+                  <pingTimeout>600000</pingTimeout>
+                </deployable>
+              </deployables>
+    
+            </configuration>
+            <executions>
+              <execution>
+                <id>start-cargo</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>start</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>stop-cargo</id>
+                <phase>post-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          
+          <plugin>
+            <groupId>org.wildfly.plugins</groupId>
+            <artifactId>wildfly-maven-plugin</artifactId>
+            <version>1.0.1.Final</version>
+            <executions>
+              <execution>
+                <id>add-https</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>execute-commands</goal>
+                </goals>
+                <configuration>
+                  <execute-commands>
+                    <batch>true</batch>
+                    <commands>
+                      <command>/system-property=fni-google-drive.keyFile:add(value="${it.googleDrive.keyFile}")</command>
+                      <command>/system-property=fni-google-drive.accountId:add(value="${it.googleDrive.accountId}")</command>
+                      <command>/system-property=fni-google-drive.accountUser:add(value="${it.googleDrive.accountUser}")</command>
+                      <command>/subsystem=undertow/server=default-server/https-listener=https:add(socket-binding="https",security-realm="ssl-realm")</command>
+                      <command>/core-service=management/security-realm=ssl-realm:add()</command>
+                      <command>/core-service=management/security-realm=ssl-realm/server-identity=ssl:add(keystore-path="${project.build.directory}/fnici.keystore",keystore-password="storepass",alias="fnici")</command>
+                    </commands>
+                  </execute-commands>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      
+      <pluginRepositories>
+        <pluginRepository>
+          <id>saucelabs-repository</id>
+          <url>https://repository-saucelabs.forge.cloudbees.com/release</url>
+        </pluginRepository>
+      </pluginRepositories>
+    </profile>
   </profiles>
 
   <repositories>
@@ -724,6 +1088,19 @@
       <id>google-diff-patch-match</id>
       <name>google-diff-patch-match</name>
       <url>http://google-diff-match-patch.googlecode.com/svn/trunk/maven/</url>
+    </repository>
+    
+    <!-- Sauce Labs -->
+    
+    <repository>
+      <id>saucelabs-repository</id>
+      <url>https://repository-saucelabs.forge.cloudbees.com/release</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
